Move title to navbar, fix navbar collapse on small devices

--- a/src/main/resources/site/css/custom-themes.css
+++ b/src/main/resources/site/css/custom-themes.css
@@ -100,7 +100,7 @@ html,body {
 .row-type {
     position: relative;
     display: block;
-    height: 40%;
+    height: 50%;
     margin-bottom: 1%;
 }
 
@@ -143,7 +143,7 @@ html,body {
     height: 100%;
     float: left;
     margin-right: 1%;
-    resize: none; 
+    resize: none;
     display: block;
 }
 
@@ -194,8 +194,11 @@ th {
  */
 
 .main {
-  padding: 20px;
-  width: 100%;
+    width: 100%;
+    position:fixed;
+    display:block;
+    height:100%;
+    padding: 20px 20px 150px;
 }
 @media (min-width: 768px) {
   .main {
